# dto

./: .gitignore  DependencyTypeOverride.h  Documentation.dto.txt  README.md
Examples/: CMakeLists.txt
Examples/1_SympleTypeOverriding/: CMakeLists.txt
Examples/1_SympleTypeOverriding/Default/: CMakeLists.txt
Examples/1_SympleTypeOverriding/Default/src/: Dependant.cpp  Dependant.h
Examples/1_SympleTypeOverriding/Override/: CMakeLists.txt
Examples/1_SympleTypeOverriding/Override/src/dto/: TypeOverrides.h
Examples/2_InDemandDefault/: CMakeLists.txt
Examples/2_InDemandDefault/Default/: CMakeLists.txt
Examples/2_InDemandDefault/Default/src/: 2_InDemandDefaultType.cpp  Dependant.cpp  Dependant.h  Dependencies.cpp  Dependencies.h
Examples/2_InDemandDefault/MockOverride/: CMakeLists.txt
Examples/2_InDemandDefault/MockOverride/src/: Mocks.h  Test.cpp
Examples/2_InDemandDefault/MockOverride/src/dto/: TypeOverrides.h
Examples/2_InDemandDefault/Override/: CMakeLists.txt
Examples/2_InDemandDefault/Override/src/dto/: TypeOverrides.h
Examples/ExternalLibraries/: CMakeLists.txt
Examples/ExternalLibraries/dto/: DependencyTypeOverride.h
